--- a/index.html
+++ b/index.html
@@ -1,9 +1,165 @@
+<!DOCTYPE html>
 <html>
+  <head>
+     <title>Quick Links</title>
+     <link rel="stylesheet" href="resources\css\index.css">
+  </head>
+  <body>
+    <header>
+      <h1 style="display:inline">Quick Links</h1>
 
-<body>
-  <h1>Jake</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+      <iframe style="position:fixed; bottom:0; right:0;" width="220" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="lofi hip hop radio 📚 beats to relax/study to" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+      </iframe>
+    </header>
 
+    <main>
+      <section class="link_section">
+        <h2>Links</h2>
+
+        <!--Codecademy link-->
+        <a href="https://www.codecademy.com/learn" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\codecademy.jpg');">  
+          </div>
+        </a>
+
+        <!--Rosetta Stone link-->
+        <a href="https://totale.rosettastone.com/units" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\rosettaStone.png');">  
+          </div>
+        </a>
+
+        <!--Ninchinese link-->
+        <a href="https://app.ninchanese.com/" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\ninchanese.webp');">  
+          </div>
+        </a> 
+
+        <!--Kindle link-->
+        <a href="https://read.amazon.com/kindle-library" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\kindle-icon.webp');">  
+          </div>
+        </a>
+
+        <!--LIC Market link-->
+        <a href="https://www.facebook.com/groups/1433672020208649/?sorting_setting=CHRONOLOGICAL" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\licMarket.jpg');">  
+          </div>
+        </a>
+
+        <!--Amazon Orders link-->
+        <a href="https://www.amazon.com/gp/your-account/order-history?ref_=ya_d_c_yo" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\amazonOrders.png');">  
+          </div>
+        </a>  
+
+        <!--Linkedin link-->
+        <a href="https://www.linkedin.com/in/jacob-crittenden-209225213/" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\linkedin.webp');">  
+          </div>
+        </a>
+
+        <!--Indeed link-->
+        <a href="https://www.indeed.com/?from=gnav-homepage" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\Indeed.webp');">  
+          </div>
+        </a>
+
+        <!--OneDrive link-->
+        <a href="https://onedrive.live.com/" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\onedrive-icon.png');">  
+          </div>
+        </a>
+
+      </section>
+
+      <section class="link_section">
+        <h2>Money Links</h2>
+
+        <!--CapOne link-->
+        <a href="https://myaccounts.capitalone.com/accountSummary" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\capitalOneIcon.jpg');">  
+          </div>
+        </a>
+
+        <!--CreditOne link-->
+        <a href="https://www.creditonebank.com/transactional/dashboard" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\creditOneIcon.webp');">  
+          </div>
+        </a>
+
+        <!--Merrick Bank link-->
+        <a href="https://logon.merrickbank.com/core/Account" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\merickBankIcon.webp');">  
+          </div>
+        </a>
+        
+        <!--Continental Finance link-->
+        <a href="https://yourcreditcardinfo.com/home/dashboard" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\continental_finance_co_logo.jpg');">  
+          </div>
+        </a>
+
+        <!--Macys CC link-->
+        <a href="https://www.macys.com/my-credit/gateway/cards/0" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\MacysIcon.png');">  
+          </div>
+        </a>
+
+        <!--Nelnet link-->
+        <a href="https://nelnet.studentaid.gov/dashboard">
+          <div class="qlink" style="background-image: url('resources\\images\\nelnet-logo.png');">  
+          </div>
+        </a>
+
+        <!--Coinbase link-->
+        <a href="https://www.coinbase.com/assets" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\coinbase.webp');">  
+          </div>
+        </a>
+      </section>
+
+      <section class="link_section">
+        <h2>Events</h2>
+
+        <!--Jazz Events link-->
+        <a href="https://jazz-nyc.com/" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\jazz.jpg');">  
+          </div>
+        </a>
+      </section>
+    </main>
+
+    <footer style="height:30px;">
+
+    </footer>
+
+    <!--<a href="https://1drv.ms/i/c/39A235A57DDDA65A/EZBdm1CVo9FEhQdwDNNx7l8B2nphhwKmfX3t036Fidm89A?e=eoxK6D">CSS Box Model</a>-->
+  </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
