--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
           </div>
         </a>
 
+        <!--Copilot link-->
+        <a href="https://copilot.microsoft.com/" target="_blank">
+          <div class="qlink" style="background-image: url('resources\\images\\microsoft-copilot.jpg');">  
+          </div>
+        </a>
+
       </section>
 
       <section class="link_section">
