--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
   </head>
   <body>
     <header>
-      <h1 style="display:inline">Quick Links</h1>
-
-      <iframe style="position:fixed; bottom:0; right:0;" width="220" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="lofi hip hop radio 📚 beats to relax/study to" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-      </iframe>
+      <div style="display: flex; align-items: baseline; gap: 15px;">
+      <h1>Quick Links</h1>
+      <nav>
+        <ul class="navbar">
+          <li class="activeNav">Home</li>
+          <li><a href="moneylinks.html">Money</a></li>
+        </ul>
+      </nav>
+    </div>
+      <a href="https://copilot.microsoft.com/" target="_blank">
+        <div class="hlink" style="background-image: url('resources\\images\\microsoft-copilot.jpg');">  
+        </div>
+      </a>
     </header>
 
     <main>
@@ -70,60 +79,7 @@
           </div>
         </a>
 
-        <!--Copilot link-->
-        <a href="https://copilot.microsoft.com/" target="_blank">
-          <div class="qlink" style="background-image: url('resources\\images\\microsoft-copilot.jpg');">  
-          </div>
-        </a>
-
       </section>
-
-      <section class="link_section">
-        <h2>Money Links</h2>
-
-        <!--CapOne link-->
-        <a href="https://myaccounts.capitalone.com/accountSummary" target="_blank">
-          <div class="qlink" style="background-image: url('resources\\images\\capitalOneIcon.jpg');">  
-          </div>
-        </a>
-
-        <!--CreditOne link-->
-        <a href="https://www.creditonebank.com/transactional/dashboard" target="_blank">
-          <div class="qlink" style="background-image: url('resources\\images\\creditOneIcon.webp');">  
-          </div>
-        </a>
-
-        <!--Merrick Bank link-->
-        <a href="https://logon.merrickbank.com/core/Account" target="_blank">
-          <div class="qlink" style="background-image: url('resources\\images\\merickBankIcon.webp');">  
-          </div>
-        </a>
-        
-        <!--Continental Finance link-->
-        <a href="https://yourcreditcardinfo.com/home/dashboard" target="_blank">
-          <div class="qlink" style="background-image: url('resources\\images\\continental_finance_co_logo.jpg');">  
-          </div>
-        </a>
-
-        <!--Macys CC link-->
-        <a href="https://www.macys.com/my-credit/gateway/cards/0" target="_blank">
-          <div class="qlink" style="background-image: url('resources\\images\\MacysIcon.png');">  
-          </div>
-        </a>
-
-        <!--Nelnet link-->
-        <a href="https://nelnet.studentaid.gov/dashboard">
-          <div class="qlink" style="background-image: url('resources\\images\\nelnet-logo.png');">  
-          </div>
-        </a>
-
-        <!--Coinbase link-->
-        <a href="https://www.coinbase.com/assets" target="_blank">
-          <div class="qlink" style="background-image: url('resources\\images\\coinbase.webp');">  
-          </div>
-        </a>
-      </section>
-
       <section class="link_section">
         <h2>Events</h2>
 
@@ -136,9 +92,9 @@
     </main>
 
     <footer style="height:30px;">
-
+      <iframe style="position:fixed; bottom:0; right:0;" width="220" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="lofi hip hop radio 📚 beats to relax/study to" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+      </iframe>
     </footer>
-
     <!--<a href="https://1drv.ms/i/c/39A235A57DDDA65A/EZBdm1CVo9FEhQdwDNNx7l8B2nphhwKmfX3t036Fidm89A?e=eoxK6D">CSS Box Model</a>-->
   </body>
 </html>
