--- a/moneylinks.html
+++ b/moneylinks.html
@@ -15,10 +15,17 @@
         </ul>
       </nav>
     </div>
+    <div style="margin-left:auto; margin-right: 15px;">
+    <a href="https://onedrive.live.com/" target="_blank">
+      <div class="hlink" style="background-image: url('resources\\images\\onedrive.png');">  
+      </div>
+    </a>
       <a href="https://copilot.microsoft.com/" target="_blank">
-        <div class="hlink" style="background-image: url('resources\\images\\microsoft-copilot.jpg');">  
+        <div class="hlink" style="background-image: url('resources\\images\\microsoft-copilot.png');">  
         </div>
       </a>
+    </div>
+
     </header>
 
     <main>
