--- a/moneylinks.html
+++ b/moneylinks.html
@@ -2,6 +2,7 @@
 <html>
   <head>
      <title>Quick Links</title>
+     <link rel="icon" type="image/x-icon" href="resources\images\DragonHead.jpg">
      <link rel="stylesheet" href="resources\css\index.css">
   </head>
   <body>
@@ -16,6 +17,10 @@
       </nav>
     </div>
     <div style="margin-left:auto; margin-right: 15px;">
+    <a href="https://www.google.com/maps" target="_blank">
+      <div class="hlink" style="background-image: url('resources\\images\\googlemaps.png');">  
+      </div>
+    </a>
     <a href="https://onedrive.live.com/" target="_blank">
       <div class="hlink" style="background-image: url('resources\\images\\onedrive.png');">  
       </div>
