--- a/moneylinks.html
+++ b/moneylinks.html
@@ -2,7 +2,7 @@
 <html>
   <head>
      <title>Quick Links</title>
-     <link rel="icon" type="image/x-icon" href="resources\images\DragonHead.jpg">
+     <link rel="icon" type="image/x-icon" href="resources\images\qlicon.webp">
      <link rel="stylesheet" href="resources\css\index.css">
   </head>
   <body>
@@ -12,15 +12,37 @@
       <nav>
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
+            <li><a href="joblinks.html">Jobs</a></li>
             <li class="activeNav">Money</li>
         </ul>
       </nav>
     </div>
-    <div style="margin-left:auto; margin-right: 15px;">
-    <a href="https://www.google.com/maps" target="_blank">
-      <div class="hlink" style="background-image: url('resources\\images\\googlemaps.png');">  
-      </div>
-    </a>
+    <div style="margin-left:auto; margin-right: 15px; display:flex;">
+
+      <div style="position: relative; display: inline-block;" id="dropdown">
+        <button class="dropbtn menulink" style="background-image: url('resources\\images\\googlemaps.png');">
+        </button>
+        <ul>
+          <li><a class="droplink" href="https://www.google.com/maps" target="_blank" style="font-weight: bold;">Google Maps</a></li>
+          <li><a class="droplink" href="https://www.google.com/maps/place/Taiwan/" target="_blank">Taiwan</a></li>
+          <li><a class="droplink" href="https://www.google.com/maps/place/California" target="_blank">California</a></li>
+        </ul>
+    </div>
+
+      <div style="position: relative; display: inline-block;" id="dropdown2">
+        <button class="dropbtn2 menulink" style="background-image: url('resources\\images\\NYC Ferry.png');">
+        </button>
+        <ul>
+            <li><a class="droplink" href="https://www.ferry.nyc/routes-and-schedules/astoria/" target="_blank">Astoria</a></li>
+            <li><a class="droplink" href="https://www.ferry.nyc/routes-and-schedules/east-river/" target="_blank">East River</a></li>
+        </ul>
+    </div>
+
+
+      <a href="https://www.mta.info/map/5256" target="_blank">
+        <div class="hlink" style="background-image: url('resources\\images\\nycsubwaymap.png');">  
+        </div>
+      </a>
     <a href="https://onedrive.live.com/" target="_blank">
       <div class="hlink" style="background-image: url('resources\\images\\onedrive.png');">  
       </div>
@@ -85,7 +107,6 @@
       <iframe style="position:fixed; bottom:0; right:0;" width="220" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="lofi hip hop radio 📚 beats to relax/study to" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
       </iframe>
     </footer>
-    <!--<a href="https://1drv.ms/i/c/39A235A57DDDA65A/EZBdm1CVo9FEhQdwDNNx7l8B2nphhwKmfX3t036Fidm89A?e=eoxK6D">CSS Box Model</a>-->
   </body>
 </html>
 
