--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
           </div>
         </a>
 
+                <!--freeCodeCamp link-->
+        <a href="https://www.freecodecamp.org/learn/full-stack-developer/">
+          <div class="qlink" style="background-image: url('https://www.cityofinglewood.org/ImageRepository/Document?documentId=16856');">  
+          </div>
+        </a>
+
         <!--Rosetta Stone link-->
         <a href="https://totale.rosettastone.com/units" target="_blank">
           <div class="qlink" style="background-image: url('resources\\images\\rosettaStone.png');">  
