--- a/joblinks.html
+++ b/joblinks.html
@@ -123,6 +123,7 @@
                       </a> 
                       
             </section>
+            <p>During interviews, be prepared to provide examples of how your core competencies have contributed to your success. Use the STAR method (Situation, Task, Action, Result) to do this. Example: “One of my core strengths is problem-solving. At my previous job, I identified inefficiencies in our supply chain (Situation), implemented a real-time tracking system (Task), and reduced delivery delays by 25% (Result).”</p>
     </main>
 
     <footer style="height:30px;">
