--- a/joblinks.html
+++ b/joblinks.html
@@ -123,7 +123,10 @@
                       </a> 
                       
             </section>
-            <p>During interviews, be prepared to provide examples of how your core competencies have contributed to your success. Use the <strong>STAR method (Situation, Task, Action, Result)</strong> to do this. Example: “One of my core strengths is problem-solving. At my previous job, I identified inefficiencies in our supply chain (Situation), implemented a real-time tracking system (Task), and reduced delivery delays by 25% (Result).”</p>
+            <p>During interviews, be prepared to provide examples of how your core competencies have contributed to your success. Use the <strong>STAR method (Situation, Task, Action, Result)</strong> to do this. 
+              <br>
+              <br>
+              Example: <em>“One of my core strengths is problem-solving. At my previous job, I identified inefficiencies in our supply chain (Situation), implemented a real-time tracking system (Task), and reduced delivery delays by 25% (Result).”</em></p>
     </main>
 
     <footer style="height:30px;">
